--- a/login.html
+++ b/login.html
@@ -85,7 +85,7 @@
 <body>
 <div id="space-container"></div>
 <div class="container animate__animated animate__fadeIn">
-    <h1 class="animate__animated animate__fadeInDown">ברוכים הבאים ל-GPI</h1>
+    <h1 class="animate__animated animate__fadeInDown">ברוכים הבאים -GPI</h1>
     <h2 class="animate__animated animate__fadeInUp">מייבאים לכם חלומות</h2>
     <button id="login-button" class="animate__animated animate__pulse animate__infinite">התחבר עם Google</button>
     <p id="status"></p>
