--- a/n.html
+++ b/n.html
@@ -2,6 +2,7 @@
 <html lang="he">
 <head>
     <meta charset="UTF-8">
+    <meta name="theme-color" content="#2c3e50">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GPI - טקסטיל ומוצרי תינוקות</title>
     <style>
