--- a/ניהולהזמנות.html
+++ b/ניהולהזמנות.html
@@ -1249,82 +1249,85 @@
             <button class="profile-menu-button" id="logout-button">התנתק</button>
         </div>
     </div>
+<script>
+    const firebaseConfig = {
+        apiKey: "AIzaSyAaOp49avUlLknLkGzskeCPCk9xPOAeMUE",
+        authDomain: "gpi0-d1e6d.firebaseapp.com",
+        databaseURL: "https://gpi0-d1e6d-default-rtdb.firebaseio.com",
+        projectId: "gpi0-d1e6d",
+        storageBucket: "gpi0-d1e6d.appspot.com",
+        messagingSenderId: "138797690477",
+        appId: "1:138797690477:web:5d04dd40ed2a577dbed964",
+        measurementId: "G-DP0JJ2FX3D"
+    };
 
-    <script>
-        const firebaseConfig = {
-            apiKey: "AIzaSyAaOp49avUlLknLkGzskeCPCk9xPOAeMUE",
-            authDomain: "gpi0-d1e6d.firebaseapp.com",
-            databaseURL: "https://gpi0-d1e6d-default-rtdb.firebaseio.com",
-            projectId: "gpi0-d1e6d",
-            storageBucket: "gpi0-d1e6d.appspot.com",
-            messagingSenderId: "138797690477",
-            appId: "1:138797690477:web:5d04dd40ed2a577dbed964",
-            measurementId: "G-DP0JJ2FX3D"
-        };
+    // אתחול Firebase
+    firebase.initializeApp(firebaseConfig);
 
-        // אתחול Firebase
-        firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
 
-        const auth = firebase.auth();
+    // רשימת האימיילים המורשים
+    const allowedEmails = ["dovgotesman1@gmail.com", "zevi1706@gmail.com", "m0534575029@gmail.com"];
 
-        // פונקציה לבדוק אם המשתמש מחובר
-        auth.onAuthStateChanged(user => {
-            if (!user) {
-                // אם המשתמש לא מחובר, הפנה אותו לדף התחברות
-                window.location.href = "https://zevis-ai.github.io/GPI/login.html";
-            } else {
-                // אם המשתמש מחובר, עדכן את תמונת הפרופיל ופרטי המשתמש
-                const profilePicture = document.getElementById('profile-picture');
-                const profileMenuPicture = document.getElementById('profile-menu-picture');
-                const profileMenuName = document.getElementById('profile-menu-name');
-                const profileMenuEmail = document.getElementById('profile-menu-email');
-
-                profilePicture.src = user.photoURL || 'default-profile.png';
-                profileMenuPicture.src = user.photoURL || 'default-profile.png';
-                profileMenuName.textContent = user.displayName || 'משתמש';
-                profileMenuEmail.textContent = user.email || '';
-            }
-        });
-
-        // טיפול בלחיצה על תמונת הפרופיל
-        document.getElementById('profile-picture').addEventListener('click', () => {
-            document.getElementById('profile-menu').classList.toggle('show');
-        });
-
-        // סגירת התפריט בלחיצה מחוץ לאזור התפריט
-        document.addEventListener('click', (event) => {
-            const profileMenu = document.getElementById('profile-menu');
+    // פונקציה לבדוק אם המשתמש מחובר ואם האימייל שלו מורשה
+    auth.onAuthStateChanged(user => {
+        if (!user || !allowedEmails.includes(user.email)) {
+            // אם המשתמש לא מחובר או שהאימייל שלו לא מורשה, הפנה אותו לדף ה-Index
+            window.location.href = "index.html";
+        } else {
+            // אם המשתמש מחובר ואימיילו מורשה, עדכן את תמונת הפרופיל ופרטי המשתמש
             const profilePicture = document.getElementById('profile-picture');
-            if (!profileMenu.contains(event.target) && event.target !== profilePicture) {
-                profileMenu.classList.remove('show');
-            }
-        });
+            const profileMenuPicture = document.getElementById('profile-menu-picture');
+            const profileMenuName = document.getElementById('profile-menu-name');
+            const profileMenuEmail = document.getElementById('profile-menu-email');
 
-        // פונקציות לכפתורי התפריט
-        document.getElementById('profile-button').addEventListener('click', () => {
-            console.log('עבור לדף הפרופיל');
-            // הוסף כאן את הקוד לניווט לדף הפרופיל
-        });
+            profilePicture.src = user.photoURL || 'default-profile.png';
+            profileMenuPicture.src = user.photoURL || 'default-profile.png';
+            profileMenuName.textContent = user.displayName || 'משתמש';
+            profileMenuEmail.textContent = user.email || '';
+        }
+    });
 
-        document.getElementById('orders-button').addEventListener('click', () => {
-            console.log('עבור לדף ההזמנות');
-            // הוסף כאן את הקוד לניווט לדף ההזמנות
-        });
+    // טיפול בלחיצה על תמונת הפרופיל
+    document.getElementById('profile-picture').addEventListener('click', () => {
+        document.getElementById('profile-menu').classList.toggle('show');
+    });
 
-        document.getElementById('settings-button').addEventListener('click', () => {
-            console.log('עבור לדף ההגדרות');
-            // הוסף כאן את הקוד לניווט לדף ההגדרות
-        });
+    // סגירת התפריט בלחיצה מחוץ לאזור התפריט
+    document.addEventListener('click', (event) => {
+        const profileMenu = document.getElementById('profile-menu');
+        const profilePicture = document.getElementById('profile-picture');
+        if (!profileMenu.contains(event.target) && event.target !== profilePicture) {
+            profileMenu.classList.remove('show');
+        }
+    });
 
-        // פונקציה להתנתקות
-        document.getElementById('logout-button').addEventListener('click', () => {
-            auth.signOut().then(() => {
-                window.location.href = "https://zevis-ai.github.io/GPI/login.html";
-            }).catch((error) => {
-                console.error("שגיאה בהתנתקות:", error);
-            });
+    // פונקציות לכפתורי התפריט
+    document.getElementById('profile-button').addEventListener('click', () => {
+        console.log('עבור לדף הפרופיל');
+        // הוסף כאן את הקוד לניווט לדף הפרופיל
+    });
+
+    document.getElementById('orders-button').addEventListener('click', () => {
+        console.log('עבור לדף ההזמנות');
+        // הוסף כאן את הקוד לניווט לדף ההזמנות
+    });
+
+    document.getElementById('settings-button').addEventListener('click', () => {
+        console.log('עבור לדף ההגדרות');
+        // הוסף כאן את הקוד לניווט לדף ההגדרות
+    });
+
+    // פונקציה להתנתקות
+    document.getElementById('logout-button').addEventListener('click', () => {
+        auth.signOut().then(() => {
+            window.location.href = "index.html";
+        }).catch((error) => {
+            console.error("שגיאה בהתנתקות:", error);
         });
-    </script>
+    });
+</script>
+
 
     <script>
         const menuToggle = document.querySelector('.menu-toggle');
