--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                 <a href="#">תנאי שימוש</a>
                 <a href="#">מדיניות פרטיות</a>
                 <a href="#">צור קשר</a>
-                <a href="ניהולהזמנות.html">ניהול הזמנות</a>
+                <a href="ניהולהזמנות.html">ניהול</a>
                 <a href="דוגמה לדף תשלום.html">דוגמה לדף תשלום</a>
                 
             </div>
