--- a/index.html
+++ b/index.html
@@ -493,9 +493,9 @@
         });
 
         document.getElementById('orders-button').addEventListener('click', () => {
-            console.log('עבור לדף ההזמנות');
-            // הוסף כאן את הקוד לניווט לדף ההזמנות
-        });
+    window.location.href = "orders.html"; // הפנה לדף ההזמנות
+});
+
 
         document.getElementById('settings-button').addEventListener('click', () => {
             console.log('עבור לדף ההגדרות');
